@@ -65,6 +65,7 @@ Release 0.20.0 - Unreleased
                (Erik Holstad via Stack)
    HBASE-1188  Memory size of Java Objects - Make cacheable objects implement
                HeapSize (Erik Holstad via Stack)
+   HBASE-1230  Document installation of HBase on Windows
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
